# mail-todo

./: .gitignore  Cargo.toml  README.md  mail-todo.service
resources/: ui.glade
src/: backup.rs  lib.rs  main.rs  notifier.rs  parser.rs  poker.rs  poller.rs  test.glade
