[package]

name = "mail-todo"
version = "0.0.4"
authors = [ "Miquel Ruiz <mruiz@cpan.org>" ]

[dependencies]

env_logger = "*"
glib = "*"
email = "*"
getopts = "*"
imap = "0.3.1"
log = "*"
libresolv-sys = { path = "libresolv-sys", version = "0.1.0" }
openssl = "*"
regex = "*"
notify-rust = "*"

[dependencies.gtk]
version = "*"
features = ["v3_10"]
