[package]

name = "mail-todo"
version = "0.0.4"
authors = [ "Miquel Ruiz <mruiz@cpan.org>" ]

[dependencies]

email = "*"
env_logger = "*"
getopts = "*"
glib = "*"
imap = "0.3.1"
libresolv-sys = { path = "libresolv-sys", version = "0.1.0" }
log = "*"
notify-rust = "*"
openssl = "*"
regex = "*"

[dependencies.gtk]
version = "*"
features = ["v3_10"]
